# yrexpert

./: .gitattributes  .gitignore  CMakeLists.txt  CTestConfig.cmake  requirements.txt
cmake/: Build.cmake.in  CTestCustom.cmake.in  CacheVerifyTelnet.scp.in  CommonFunctions.cmake  FindCacheOrGTM.cmake  UseCache.cmake  UseGTM.cmake
docgen/Doxygen/: Doxyfile  README.md  mainpage.py
docgen/Sphinx/: README.rst  mycode.rst  myconf.py  myindex.rst
docs/: HOME.md  README.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_ja.md  README_zh.md
docs/en/: README.md
docs/fr/: README.md  contributeurs.md  murDeLaGloire.md  presentationDeYRExpert.md  version.csv
docs/ja/: README.md
docs/sp/: README.md
docs/wiki/: HOME.md  introduction.md
docs/wiki/de/: empfang.md  startseite.md
docs/wiki/en/: home.md
docs/wiki/es/: README.md  inicio.md
docs/wiki/fr/: README.md  accueil.md  agpl-3.0.md  ameliorations.md  construireUneInstance.md  contributeurs.md  faireSesPremiersPas.md  modifications.md  murDeLaGloire.md  presentationDeYRExpert.md  remerciements.md  utilisationDeCmake.md
docs/wiki/ja/: homu.md
docs/wiki/sp/: README.md
docs/wiki/zh/: README.md  huanyíng.md  shouye.md
docs/zh/: README.md
scripts/install/debian/: Vagrantfile  amorcerServeurDebian.sh  installerAuto.sh  test.cmake
scripts/install/gtm/etc/: yrexpert-release
scripts/install/gtm/etc/init.d/: y-instance-yrexpert
scripts/install/gtm/scripts/: desinstallerGTM.sh  gtminstall  installerGTM.sh
scripts/install/instance/: creerInstanceYRExpert.sh  importerYRExpert-ewd.sh
scripts/install/partition/: creerPartitionUtil.sh  importerPartitionUtil.sh  supprimerPartitionUtil.sh
scripts/install/scripts/: listerInstance.sh  supprimerInstanceYRExpert.sh
scripts/install/ydb/etc/: yrexpert-release
scripts/install/ydb/etc/init.d/: y-instance-yrexpert
scripts/install/ydb/scripts/: activerJournal.sh  creerEnvYRExpert-release.sh  creerInstanceYRExpert.sh  creerPartitionUtil.sh  desactiverJournal.sh  desinstallerYDB.sh  faireTournerJournal.sh  importerPartitionUtil.sh  importerYRExpert-m.sh  installerYDB.sh  reparerGlobalsYXP.sh  ydb
scripts/install/yrexpert-js/etc/init.d/: y-instance-yrexpert-js
scripts/install/yrexpert-js/scripts/: yrexpert-js.sh
scripts/install/yxp/: activerJournal.sh  admin.sh  desactiverJournal.sh  faireTournerJournal.sh  importerYRExpert-m.sh  reparerGlobalsYXP.sh
tests/: CMakeLists.txt
tests/fonctionnel/: CMakeLists.txt
tests/installation/: CMakeLists.txt
tests/utilisateur/: CMakeLists.txt
utilitaires/dox/: CMakeLists.txt
